# dynamic_parameter_identification

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/: CollisionCheck.py  EquationDerivation.py  EquationDerivationRNEA.py  IDmodel.py  MetaGen.py  ParamsEstimation.py  ParamsEstimationDiscard.py  TrajGeneration.py  ViewTraj.py  admittance_test.py  convexhallExtraction.py  ground_truth_gen_sim.py  parameters1.txt  record.txt  regression.py  scale_trajectories.py  test_model.py  trajsimulation.py  utility_math.py
src/examples/: lbr_traj_gen.py  lbr_traj_sim.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/test/: DynamicParameters.csv  DynamicParameters_11.csv  DynamicParameters_ch.csv  joint_states_efforts.csv  joint_states_positions.csv  joint_states_velocities.csv  measurements.csv  measurements_with_ext_tau.csv  robot_data copy 2.csv  robot_data copy.csv  robot_data.csv
trajectory_acquisition/: .env  package.xml  setup.cfg  setup.py
trajectory_acquisition/config/: target_joint_positions.csv  trajectory_acquisition.csv
trajectory_acquisition/launch/: trajectory_acqusition.launch.py
trajectory_acquisition/trajectory_acquisition/: joint_state_recording_node.py  trajectory_acquisition_node.py  trajectory_execution_node.py  trajectory_recording_node.py
trajectory_acquisition_msgs/: CMakeLists.txt  package.xml
trajectory_acquisition_msgs/srv/: Save.srv
urdf/: med7dock.urdf.xacro
urdf/med/: med7dock.urdf  med7dock.urdf.xacro
urdf/xarm/: xarm7_description.urdf.xacro  xarm7base.urdf  xarm7base.urdf.xacro
