<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gravity_compensation</name>
  <version>0.0.0</version>
  <description>Equation Derivation</description>
  <maintainer email="huanyu.tian@kcl.ac.uk">tianhuanyu</maintainer>
  <license>MIT</license>

  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>lbr_fri_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>lbr_fri_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>kdl_parser</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>